--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ button
   border: none;
   letter-spacing: 2px;
   font-size: 12px;
-  background-color: rgb(255, 152, 0);
+  background-color: #EAEAF8;
   color: rgb(0, 0, 0);
   border-radius: 70px;
   padding: 0 15px 0 50px;
@@ -614,7 +614,7 @@ button
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
 }
 .mil-button svg path {
-  fill: rgb(255, 152, 0);
+  fill: #EAEAF8;
 }
 .mil-button.mil-icon-button {
   padding: 15px;
@@ -1079,7 +1079,7 @@ preloader
   position: absolute;
   opacity: 0;
   height: 100%;
-  background-color: rgb(255, 152, 0);
+  background-color: rgb(0, 255, 213);
 }
 .mil-preloader.mil-hidden {
   pointer-events: none;
@@ -1174,7 +1174,7 @@ scrollbar
 .mil-progress-track .mil-progress {
   width: 4px;
   height: 0;
-  background-color: rgb(255, 152, 0);
+  background-color: #EAEAF8;
 }
 @media screen and (max-width: 992px) {
   .mil-progress-track {
