--- a/css/style.css
+++ b/css/style.css
@@ -877,6 +877,9 @@ backgrounds
   background-color: rgb(242, 242, 242);
 }
 
+.slider-bg {
+  background-color: #f7f7fe;
+}
 /* -------------------------------------------
 
 spaces
