--- a/css/style.css
+++ b/css/style.css
@@ -670,7 +670,7 @@ button
   fill: rgb(0, 0, 0);
 }
 .mil-button {
-  background: #f7f7fe /* your gradient color */
+  background: #f7f7fe; /* your gradient color */
   background-size: 100% 100%;
   transition: background-size 0.3s ease; /* Adds smooth transition for background */
 }
