--- a/css/style.css
+++ b/css/style.css
@@ -2258,7 +2258,7 @@ about
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: rgb(255, 152, 0);
+  background-color: #8162FE;
   position: absolute;
   bottom: 0;
   right: 0;
