--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ a {
 }
 
 .mil-accent {
-  color: rgb(255, 152, 0);
+  color: #8162FE;
 }
 
 .mil-light {
@@ -664,7 +664,7 @@ button
 }
 .mil-button.mil-icon-button-sm svg {
   margin-left: 0;
-  background-color: rgb(255, 152, 0);
+  background-color: #f7f7fe;
 }
 .mil-button.mil-icon-button-sm svg path {
   fill: rgb(0, 0, 0);
@@ -2416,7 +2416,7 @@ services
   left: 0;
   height: 4px;
   width: 0;
-  background-color: rgb(255, 152, 0);
+  background-color: #8162FE;
   -webkit-transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
 }
@@ -2565,7 +2565,7 @@ team
   left: 0;
   height: 4px;
   width: 0;
-  background-color: rgb(255, 152, 0);
+  background-color: #8162FE;
   -webkit-transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
 }
@@ -2790,8 +2790,8 @@ revievs
   background-image: url(../img/faces/customers/7.jpg);
 }
 .mil-revi-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  -webkit-box-shadow: inset 0 0 0 4px rgb(255, 152, 0);
-          box-shadow: inset 0 0 0 4px rgb(255, 152, 0);
+  -webkit-box-shadow: inset 0 0 0 4px #8162FE;
+          box-shadow: inset 0 0 0 4px #8162FE;
 }
 
 .mil-quote-icon {
@@ -2802,7 +2802,7 @@ revievs
   margin-bottom: 15px;
 }
 .mil-quote-icon path {
-  fill: rgb(255, 152, 0);
+  fill: #8162FE;
 }
 
 .mil-slider-nav {
@@ -3073,7 +3073,7 @@ footer
 .mil-footer-menu ul li a:hover {
   -webkit-transform: translateX(10px);
           transform: translateX(10px);
-  color: rgb(255, 152, 0);
+  color: #8162FE;
 }
 @media screen and (max-width: 768px) {
   .mil-footer-menu ul li a {
@@ -3081,7 +3081,7 @@ footer
   }
 }
 .mil-footer-menu ul li.mil-active a {
-  color: rgb(255, 152, 0);
+  color: #8162FE;
 }
 .mil-footer-menu ul li.mil-active a:hover {
   -webkit-transform: none;
